# CATTS-VideoTranscriber

./: .gitignore  CONTRIBUTING.md  README.md  build.bat  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: build-windows.yml  build.yml  test.yml
.serena/: project.yml
docs/: README_ko.md
docs/plans/: 2026-02-28-video-transcriber-design.md  2026-02-28-video-transcriber-plan.md
docs/superpowers/plans/: 2026-03-14-speaker-diarization.md  2026-03-15-diarization-accuracy-and-settings.md  2026-04-04-diarization-redesign.md
docs/superpowers/specs/: 2026-03-14-speaker-diarization-design.md  2026-03-15-diarization-accuracy-improvement-design.md  2026-03-15-settings-dialog-design.md  2026-04-04-diarization-redesign.md  2026-04-04-vad-chunking-hallucination-filter.md
src/: audio_preprocess.py  config.py  crash_reporter.py  database.py  diarizer.py  dict_analyzer.py  hallucination_filter.py  main.py  main_window.py  model_utils.py  torchaudio_compat.py  transcriber.py  updater.py  version_checker.py
tests/: test_audio_preprocess.py  test_config.py  test_crash_reporter.py  test_database.py  test_diarizer.py  test_hallucination_filter.py  test_memory.py  test_model_utils.py  test_torch_load_patch.py  test_transcriber.py
