[project]
name = "video-transcriber"
version = "22"
description = "영상 음성 추출 및 텍스트 변환 프로그램"
requires-python = ">=3.11"

[project.scripts]
video-transcriber = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/main.py",
    "src/main_window.py",
    "src/version_checker.py",
    "src/transcriber.py",
    "src/dict_analyzer.py",
]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_empty = true
